Change all function of planner to buyer
Change file name and the way to login

--- a/TMSProject/TMSProject/Program/BuyerWindow.xaml
+++ b/TMSProject/TMSProject/Program/BuyerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TMSProject.Program.PlannerWindow"
+﻿<Window x:Class="TMSProject.Program.BuyerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:TMSProject.Program"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d" 
-        Title="PlannerWindow" Height="600" Width="1080" 
+        Title="BuyerWindow" Height="600" Width="1080" 
         Foreground="White" 
         ResizeMode="NoResize" 
         WindowStartupLocation="CenterScreen" 
