--- a/TMSProject/TMSProject/Program/BuyerHome.xaml
+++ b/TMSProject/TMSProject/Program/BuyerHome.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TMSProject.Program.PlannerHome"
+﻿<UserControl x:Class="TMSProject.Program.BuyerHome"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
