--- a/TMSProject/TMSProject/Program/OrderAdd.xaml
+++ b/TMSProject/TMSProject/Program/OrderAdd.xaml
@@ -18,7 +18,7 @@
             </TextBox>
         </ControlTemplate>
     </UserControl.Resources>
-    <Grid Background="#534bae" >
+    <Grid Background="#534bae" x:Name="GridMain">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50*"/>
             <ColumnDefinition Width="51*"/>
@@ -30,15 +30,16 @@
             <StackPanel Margin="-4.4,-30.4,4.4,-19.6">
                 <Grid Margin="0 0 0 20"/>
                 <TextBlock Foreground="Blue" Text="Add New Load" FontSize="30" FontWeight="Bold" Margin="0,0,517,20"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Order ID"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Order Date"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Departure Location"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Destination Location"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Weight"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Pallet"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Van Type"/>
+                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Company"/>
+                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Username"/>
+                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Phone Number"/>
+                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Address"/>
+                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Postal Code"/>
+                <ComboBox Foreground="Black" materialDesign:HintAssist.Hint="City" Margin="0 5"/>
+                <ComboBox Foreground="Black" materialDesign:HintAssist.Hint="Province" Margin="0 5"/>
+                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Postal Code"/>
 
-     
+
                 <Button Content="Confirm" Margin="0 20" Click="btn_Order_Add"/>
             </StackPanel>
         </Border>
