--- a/TMSProject/TMSProject/Program/BuyerWindow.xaml
+++ b/TMSProject/TMSProject/Program/BuyerWindow.xaml
@@ -34,14 +34,24 @@
         </EventTrigger>
     </Window.Triggers>
     <Grid Background="#FFDEDEDE">
-        <Grid x:Name="GridMain" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="540" Width="1010"/>
+        <Grid x:Name="GridMain" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="535" Width="926"/>
         <Grid Height="60" VerticalAlignment="Top" Background="#FF5C99D6">
+            <Label Content="TMS Application" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="468,10,398,0" Foreground="Black" FontSize="28" RenderTransformOrigin="0.5,0.5" Width="214">
+                <Label.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform AngleY="0.214"/>
+                        <RotateTransform/>
+                        <TranslateTransform Y="0.263"/>
+                    </TransformGroup>
+                </Label.RenderTransform>
+            </Label>
             <Grid.Effect>
                 <DropShadowEffect BlurRadius="1" ShadowDepth="1" Color="#FFACACAC"/>
             </Grid.Effect>
         </Grid>
 
-        <Grid x:Name="GridMenu" Width="70" HorizontalAlignment="Left" Background="#FF31577E">
+        <Grid x:Name="GridMenu" Width="154" HorizontalAlignment="Left" Background="#FF31577E">
             <Grid.Effect>
                 <DropShadowEffect BlurRadius="2" ShadowDepth="1" Color="#FFAEAEAE"/>
             </Grid.Effect>
@@ -65,20 +75,26 @@
                     <Image Height="80" VerticalAlignment="Bottom"/>
                 </Grid>
                 <ListView x:Name="ListViewMenu" Foreground="#FF5C99D6" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
-                    <ListViewItem x:Name="ItemHome" Height="60">
+                    <ListViewItem x:Name="ItemOrder" Height="60">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="ViewDashboard" Height="25" Width="25" Margin="10"/>
-                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="20 10"/>
+                            <materialDesign:PackIcon Kind="Add" Height="25" Width="25" Margin="10"/>
+                            <TextBlock Text="Order" VerticalAlignment="Center" Margin="20 10"/>
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem x:Name="ItemCreate" Height="60">
+                    <ListViewItem x:Name="ItemInvoice" Height="60">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Pencil" Height="25" Width="25" Margin="10"/>
-                            <TextBlock Text="Add Order" VerticalAlignment="Center" Margin="20 10"/>
+                            <materialDesign:PackIcon Kind="Invoice" Height="25" Width="25" Margin="10"/>
+                            <TextBlock Text="Invoice" VerticalAlignment="Center" Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemExit" Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="ExitToApp" Height="25" Width="25" Margin="10"/>
+                            <TextBlock Text="Exit" VerticalAlignment="Center" Margin="20 10"/>
                         </StackPanel>
                     </ListViewItem>
                 </ListView>
             </StackPanel>
         </Grid>
-    </Grid> 
+    </Grid>
 </Window>
