--- a/TMSProject/TMSProject/App.xaml
+++ b/TMSProject/TMSProject/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TMSProject"
-             StartupUri="./Program/Login.xaml">
+             StartupUri="./Classes/View/Login.xaml">
+
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
