Draft commit for SQL statement

--- a/TMSProject/TMSProject/Classes/View/OrderAdd.xaml
+++ b/TMSProject/TMSProject/Classes/View/OrderAdd.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="540" d:DesignWidth="1010">
     <UserControl.Resources>
         <ControlTemplate x:Key="TBTemplate" >
-            <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+            <TextBox Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
                 <TextBox.Resources>
                     <Style TargetType="ContentControl">
                         <Setter Property="Foreground" Value="CadetBlue"/>
@@ -26,18 +26,44 @@
             </Border.Effect>
             <StackPanel Margin="-4.4,-30.4,4.4,-19.6">
                 <Grid Margin="0 0 0 20"/>
-                <TextBlock Foreground="Blue" Text="Order ID:" FontSize="15" FontWeight="Bold" Margin="0,0,517,20"/>
-                <TextBlock Foreground="Blue" Text="Date:" FontSize="15" FontWeight="Bold" Margin="0,0,517,20"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Company"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Username"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Phone Number"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Address"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Postal Code"/>
-                <ComboBox Foreground="Black" materialDesign:HintAssist.Hint="City" Margin="0 5"/>
-                <ComboBox Foreground="Black" materialDesign:HintAssist.Hint="Province" Margin="0 5"/>
-                <Control Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Postal Code"/>
-
-
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Order ID:" Foreground="Blue" FontSize="15" FontWeight="Bold" />
+                    <TextBlock x:Name="txtOrderID" VerticalAlignment="Center" Foreground="Black" FontSize="15" FontWeight="Bold" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Date:" Foreground="Blue" FontSize="15" FontWeight="Bold" />
+                    <TextBlock x:Name="txtDate" VerticalAlignment="Center" Foreground="Black" FontSize="15" FontWeight="Bold" />
+                </StackPanel>
+                
+                <Control x:Name="txtCompany" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Company"/>
+                <Control x:Name="txtFirstName" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="First Name"/>
+                <Control x:Name="txtLastName" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Last Name"/>
+                <Control x:Name="txtTelPhone" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Phone Number"/>
+                <Control x:Name="txtAddress" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Address"/>
+                <Control x:Name="txtPostalCode" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Postal Code"/>
+                <ComboBox x:Name="txtCity" Foreground="Black" materialDesign:HintAssist.Hint="City" Margin="0 5">
+                    <ComboBoxItem Content="Toronto" />
+                    <ComboBoxItem Content="Waterloo" />
+                    <ComboBoxItem Content="Kitchener" />
+                    <ComboBoxItem Content="Ottawa" />
+                    <ComboBoxItem Content="London" />
+                    <ComboBoxItem Content="Hamilton" />
+                    <ComboBoxItem Content="Kingston" />
+                    <ComboBoxItem Content="Windsor" />
+                    <ComboBoxItem Content="Oshawa" />
+                    <ComboBoxItem Content="Belleville" />                    
+                </ComboBox>
+                <ComboBox x:Name="txtProvince" Foreground="Black" materialDesign:HintAssist.Hint="Province" Margin="0 5">
+                    <ComboBoxItem Content="Ontario(ON)" />
+                    <ComboBoxItem Content="British Columbia(BC)" />
+                    <ComboBoxItem Content="Alberta(AB)" />
+                    <ComboBoxItem Content="Saskatchewan(SK)" />
+                    <ComboBoxItem Content="Quebec(QC)" />
+                    <ComboBoxItem Content="Nova Scotia(NS)" />
+                    <ComboBoxItem Content="New Brunswick(NB)" />
+                    <ComboBoxItem Content="Manitoba(MB)" />
+                </ComboBox>
+               
                 <Button Content="Next" Margin="0 20" Click="btn_Order_Add"/>
             </StackPanel>
         </Border>
