--- a/TMSProject/TMSProject/Classes/View/Login.xaml
+++ b/TMSProject/TMSProject/Classes/View/Login.xaml
@@ -15,7 +15,7 @@
         TextElement.Foreground="{DynamicResource MaterialDesignBody}">
     <Grid>
 
-        <Rectangle Height="450" VerticalAlignment="Top" Margin="0,0,0.4,-0.4">
+        <Rectangle Height="450" VerticalAlignment="Top" >
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#1a237e"/>
@@ -25,15 +25,15 @@
             </Rectangle.Fill>
         </Rectangle>
 
-        <Rectangle Height="273" VerticalAlignment="Bottom" Margin="35,0,35.4,46.6" RadiusY="10" RadiusX="10" Fill="White">
+        <Rectangle Height="278" VerticalAlignment="Bottom" Margin="35,0,35.4,41.6" RadiusY="10" RadiusX="10" Fill="White">
             <Rectangle.Effect>
                 <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
             </Rectangle.Effect>
         </Rectangle>
         <Grid VerticalAlignment="Bottom" Margin="35,80" Height="240">
             <Label Content="TMS Application" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
-            <StackPanel VerticalAlignment="Center" Margin="15,44,10.4,18" Height="178">
-                <TextBox Name="usernameBox"  Margin="0,10,-0.4,10" materialDesign:HintAssist.Hint="ID" Text="{Binding ID}"  Style="{DynamicResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="38"/>
+            <StackPanel VerticalAlignment="Center" Margin="15,44,10.4,10" Height="186">
+                <TextBox Name="usernameBox" materialDesign:HintAssist.Hint="ID" Text="{Binding ID}"  Style="{DynamicResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="38"/>
                 <PasswordBox Name="passwordBox" Margin="0,10,-8.4,10" materialDesign:HintAssist.Hint="PASSWORD" Style="{DynamicResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="18" RenderTransformOrigin="0.5,0.5" Height="40">
                     <PasswordBox.RenderTransform>
                         <TransformGroup>
@@ -44,11 +44,12 @@
                         </TransformGroup>
                     </PasswordBox.RenderTransform>
                 </PasswordBox>
-                <RadioButton x:Name="BuyerRadioButton" Content="Sign in as Buyer" Height="31" Margin="0,0,-0.6,0" RenderTransformOrigin="0.495,1.144"/>
-                <RadioButton x:Name="PlannerRadioButton" Content="Sign in as Planner"/>
+                <RadioButton x:Name="BuyerRadioButton" Content="Sign in as Buyer" Height="31" RenderTransformOrigin="0.495,1.144"/>
+                <RadioButton x:Name="PlannerRadioButton" Content="Sign in as Planner" Height="31" RenderTransformOrigin="0.495,1.144"/>
+                <RadioButton x:Name="AdminRadioButton" Content="Sign in as Admin" Height="31" RenderTransformOrigin="0.495,1.144"/>
             </StackPanel>
         </Grid>
-        <Button Click="Login_Click" Width="196" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="73,0,81.4,35.6" Content="LOGIN" Height="33" Style="{StaticResource MaterialDesignRaisedLightButton}" />
-        <Image Source="../Resource/home.png" Width="100" Height="100" VerticalAlignment="Top" Margin="30"/>
+        <Button Click="Login_Click" Width="196" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="67,0,87.4,30.6" Content="LOGIN" Height="33" Style="{StaticResource MaterialDesignRaisedLightButton}" />
+        <Image Source="/Resource/home.png" Width="100" Height="100" VerticalAlignment="Top" Margin="30"/>
     </Grid>
 </Window>
