--- a/TMSProject/TMSProject/Classes/View/OrderAdd.xaml
+++ b/TMSProject/TMSProject/Classes/View/OrderAdd.xaml
@@ -7,18 +7,7 @@
              mc:Ignorable="d" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
              d:DesignHeight="540" d:DesignWidth="1010">
-    <UserControl.Resources>
-        <ControlTemplate x:Key="TBTemplate" >
-            <TextBox Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
-                <TextBox.Resources>
-                    <Style TargetType="ContentControl">
-                        <Setter Property="Foreground" Value="CadetBlue"/>
-                    </Style>
-                </TextBox.Resources>
-            </TextBox>
-        </ControlTemplate>
-    </UserControl.Resources>
-   
+
     <Grid Background="#534bae" x:Name="GridOrder">
             <Border Margin="10,10,50.6,10" MinWidth="400" Background="White" VerticalAlignment="Center" Padding="30" CornerRadius="10" MaxWidth="800" Height="520">
             <Border.Effect>
@@ -34,15 +23,60 @@
                     <Label Content="Date:" Foreground="Blue" FontSize="15" FontWeight="Bold" />
                     <TextBlock x:Name="txtDate" VerticalAlignment="Center" Foreground="Black" FontSize="15" FontWeight="Bold" />
                 </StackPanel>
+
+                <!-- COMPANY TEXTBOX -->
+                <TextBox x:Name="txtCompany" materialDesign:HintAssist.Hint="Customer Company" Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                    <TextBox.Resources>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="Foreground" Value="CadetBlue"/>
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
                 
-                <Control x:Name="txtCompany" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Company"/>
-                <Control x:Name="txtFirstName" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="First Name"/>
-                <Control x:Name="txtLastName" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Last Name"/>
-                <Control x:Name="txtTelPhone" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Phone Number"/>
-                <Control x:Name="txtAddress" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Address"/>
-                <Control x:Name="txtPostalCode" Template="{StaticResource TBTemplate}" materialDesign:HintAssist.Hint="Postal Code"/>
-                <ComboBox x:Name="txtCity" Foreground="Black" materialDesign:HintAssist.Hint="City" Margin="0 5">
-                    <ComboBoxItem Content="Toronto" />
+                <!-- FIRST NAME TEXT BOX -->
+                <TextBox x:Name="txtFirstName" materialDesign:HintAssist.Hint="Customer First Name" Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                    <TextBox.Resources>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="Foreground" Value="CadetBlue"/>
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
+                <!-- LAST NAME TEXT BOX -->
+                <TextBox x:Name="txtLastName" materialDesign:HintAssist.Hint="Customer Last Name" Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                    <TextBox.Resources>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="Foreground" Value="CadetBlue"/>
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
+                <!-- TELEPHONE TEXT BOX -->
+                <TextBox x:Name="txtTelPhone" materialDesign:HintAssist.Hint="Customer Telephone Number" Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                    <TextBox.Resources>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="Foreground" Value="CadetBlue"/>
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
+                <!-- ADDRESS TEXT BOX-->
+                <TextBox x:Name="txtAddress" materialDesign:HintAssist.Hint="Customer Address" Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                    <TextBox.Resources>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="Foreground" Value="CadetBlue"/>
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
+                <!-- POSTAL CODE TEXT BOX -->
+                <TextBox x:Name="txtPostalCode" materialDesign:HintAssist.Hint="Customer Postal Code" Foreground="Black" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                    <TextBox.Resources>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="Foreground" Value="CadetBlue"/>
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
+                
+                <!-- CITY COMBO BOX -->
+                <ComboBox x:Name="txtCity" Foreground="Black" materialDesign:HintAssist.Hint="City" Margin="0 5" SelectedValuePath="Content">
+                    <ComboBoxItem Content="Toronto"/>
                     <ComboBoxItem Content="Waterloo" />
                     <ComboBoxItem Content="Kitchener" />
                     <ComboBoxItem Content="Ottawa" />
@@ -53,7 +87,8 @@
                     <ComboBoxItem Content="Oshawa" />
                     <ComboBoxItem Content="Belleville" />                    
                 </ComboBox>
-                <ComboBox x:Name="txtProvince" Foreground="Black" materialDesign:HintAssist.Hint="Province" Margin="0 5">
+                <!-- PROVINCE COMBO BOX-->
+                <ComboBox x:Name="txtProvince" Foreground="Black" materialDesign:HintAssist.Hint="Province" Margin="0 5" SelectedValuePath="Content">
                     <ComboBoxItem Content="Ontario(ON)" />
                     <ComboBoxItem Content="British Columbia(BC)" />
                     <ComboBoxItem Content="Alberta(AB)" />
