--- a/TMSProject/TMSProject/Classes/View/ShippingInfo.xaml
+++ b/TMSProject/TMSProject/Classes/View/ShippingInfo.xaml
@@ -14,11 +14,11 @@
             <ColumnDefinition Width="50*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Margin="10,10,50.6,10" MinWidth="400" Background="White" VerticalAlignment="Center" Padding="30" CornerRadius="10" MaxWidth="800" Height="420" Grid.ColumnSpan="2">
+        <Border Margin="10,36,-3,60" MinWidth="400" Background="White" VerticalAlignment="Center" Padding="30" CornerRadius="10" MaxWidth="800" Height="444" Grid.ColumnSpan="2">
             <Border.Effect>
                 <DropShadowEffect BlurRadius="30" Color="LightGray" ShadowDepth="0"/>
             </Border.Effect>
-            <StackPanel Margin="-4.4,-30.4,4.4,-19.6">
+            <StackPanel Margin="1,7,-1,17">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50*" />
@@ -26,22 +26,22 @@
                     </Grid.ColumnDefinitions>
 
                     <StackPanel Grid.Column="0" Margin="0,0,53.6,-0.8">
-                        <ComboBox Foreground="Black" materialDesign:HintAssist.Hint="From" Margin="0 5" SelectionChanged="ComboBox_SelectionChanged"/>
-                        <TextBox materialDesign:HintAssist.Hint="Address" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                        <ComboBox x:Name="boxFrom" Foreground="Black" materialDesign:HintAssist.Hint="From" Margin="2,5,-2.2,5"/>
+                        <TextBox x:Name="txtAddressFrom" materialDesign:HintAssist.Hint="Address" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
                             <TextBox.Resources>
                                 <Style TargetType="ContentControl">
                                     <Setter Property="Foreground" Value="Black"/>
                                 </Style>
                             </TextBox.Resources>
                         </TextBox>
-                        <TextBox materialDesign:HintAssist.Hint="Postal Code" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                        <TextBox x:Name="txtPostalCodeFrom" materialDesign:HintAssist.Hint="Postal Code" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
                             <TextBox.Resources>
                                 <Style TargetType="ContentControl">
                                     <Setter Property="Foreground" Value="Black"/>
                                 </Style>
                             </TextBox.Resources>
                         </TextBox>
-                        <DatePicker materialDesign:HintAssist.Hint="Year/MM/DD" Foreground="Black" DisplayDateStart="{x:Static sys:DateTime.Today}" Margin="0 5" Height="55"/>
+                        <DatePicker Name="txtDateFrom" materialDesign:HintAssist.Hint="Year/MM/DD" Foreground="Black" DisplayDateStart="{x:Static sys:DateTime.Today}" Margin="0 5" Height="55"/>
                         <TextBlock Text="Carrier">
                             <TextBlock.Resources>
                                 <Style TargetType="ContentControl">
@@ -50,9 +50,9 @@
                             </TextBlock.Resources>
                         </TextBlock>
                         <StackPanel>
-                            <CheckBox Foreground="Black" Margin="10">FTL</CheckBox>
+                            <CheckBox x:Name="boxFTL" Foreground="Black" Margin="10">FTL</CheckBox>
                         </StackPanel>
-                        <TextBox materialDesign:HintAssist.Hint="Weight (lbs)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                        <TextBox x:Name="txtWeight" materialDesign:HintAssist.Hint="Weight (lbs)" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
                             <TextBox.Resources>
                                 <Style TargetType="ContentControl">
                                     <Setter Property="Foreground" Value="Black"/>
@@ -61,22 +61,22 @@
                         </TextBox>
                     </StackPanel>
                     <StackPanel Grid.Column="1">
-                        <ComboBox Foreground="Black" materialDesign:HintAssist.Hint="To" Margin="0 5" SelectionChanged="ComboBox_SelectionChanged"/>
-                        <TextBox materialDesign:HintAssist.Hint="Address" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                        <ComboBox x:Name="boxTo" Foreground="Black" materialDesign:HintAssist.Hint="To" Margin="0 5"/>
+                        <TextBox x:Name="txtAddressTo" materialDesign:HintAssist.Hint="Address" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
                             <TextBox.Resources>
                                 <Style TargetType="ContentControl">
                                     <Setter Property="Foreground" Value="Black"/>
                                 </Style>
                             </TextBox.Resources>
                         </TextBox>
-                        <TextBox materialDesign:HintAssist.Hint="Postal Code" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                        <TextBox x:Name="txtpostalCodeTo" materialDesign:HintAssist.Hint="Postal Code" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
                             <TextBox.Resources>
                                 <Style TargetType="ContentControl">
                                     <Setter Property="Foreground" Value="Black"/>
                                 </Style>
                             </TextBox.Resources>
                         </TextBox>
-                        <DatePicker materialDesign:HintAssist.Hint="Year/MM/DD" Foreground="Black" DisplayDateStart="{x:Static sys:DateTime.Today}" Margin="0 5" Height="55"/>
+                        <DatePicker x:Name="boxDateTo" materialDesign:HintAssist.Hint="Year/MM/DD" Foreground="Black" DisplayDateStart="{x:Static sys:DateTime.Today}" Margin="0 5" Height="55"/>
                         <TextBlock Text="Carrier">
                             <TextBlock.Resources>
                                 <Style TargetType="ContentControl">
@@ -85,9 +85,9 @@
                             </TextBlock.Resources>
                         </TextBlock>
                         <StackPanel>
-                            <CheckBox Margin="10" Foreground="Black">LTL</CheckBox>
+                            <CheckBox x:Name="boxLTL" Margin="10" Foreground="Black">LTL</CheckBox>
                         </StackPanel>
-                        <TextBox materialDesign:HintAssist.Hint="Pallet" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
+                        <TextBox x:Name="txtPallet" materialDesign:HintAssist.Hint="Pallet" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 5">
                             <TextBox.Resources>
                                 <Style TargetType="ContentControl">
                                     <Setter Property="Foreground" Value="Black"/>
@@ -99,6 +99,6 @@
                 <Button Content="OK" Click="btn_OK" Margin="206,20,286,20"/>
             </StackPanel>
         </Border>
-        
+
     </Grid>
 </UserControl>
